CMAKE_MINIMUM_REQUIRED( VERSION 2.8.9 )

ENABLE_TESTING()

SET( CMAKE_CXX_FLAGS "-std=c++11 -Os -Wall" )
SET( CMAKE_BUILD_TYPE "Release" )

# nasm (netwide assembler)
FIND_PROGRAM( BINNASM "nasm" )
IF( "${BINNASM}" STREQUAL "BINNASM-NOTFOUND" )
    MESSAGE( FATAL_ERROR "nasm not found" )
ENDIF()

# flex for lexer
FIND_PROGRAM( BINFLEX "flex" )
IF( "${BINFLEX}" STREQUAL "BINFLEX-NOTFOUND" )
    MESSAGE( FATAL_ERROR "flex not found" )
ENDIF()
FIND_LIBRARY( LIBFLEX "fl" )

# threads
FIND_LIBRARY( LIBPTHREAD "pthread" )

# crypto libs
FIND_LIBRARY( LIBSSL "ssl" )
FIND_LIBRARY( LIBCRYPTO "crypto" )

# lib for editing command line
FIND_LIBRARY( LIBTECLA "tecla" )

# X11
FIND_LIBRARY( LIBX11 "X11" )

# X11 selection lib
SET( LIBXSEL "xsel" )
SET( LIBXSEL_DIR "libs/xsel-1.2.0" )
SET( LIBXSEL_INCLUDE_DIR "${LIBXSEL_DIR}/include" )
ADD_SUBDIRECTORY( ${LIBXSEL_DIR} )

# apg lib
SET( LIBAPG "apg" )
SET( LIBAPG_DIR "libs/apg-2.2.3" )
SET( LIBAPG_INCLUDE_DIR "${LIBAPG_DIR}/include" )
ADD_SUBDIRECTORY( ${LIBAPG_DIR} )

# libs/scrypt
SET( LIBSCRYPT "scrypt" )
SET( LIBSCRYPT_DIR "libs/scrypt-1.1.6" )
SET( LIBSCRYPT_INCLUDE_DIR "${LIBSCRYPT_DIR}/lib/crypto" )
ADD_SUBDIRECTORY( ${LIBSCRYPT_DIR} )

# libs/gtest
SET( LIBGTEST "gtest" )
SET( LIBGTEST_MAIN "gtest_main" )
SET( LIBGTEST_DIR "libs/gtest-1.7.0" )
SET( LIBGTEST_INCLUDE_DIR "${LIBGTEST_DIR}/include" )
ADD_SUBDIRECTORY( ${LIBGTEST_DIR} )
SET_PROPERTY( DIRECTORY APPEND PROPERTY LINK_DIRECTORIES "${CMAKE_BINARY_DIR}/${LIBGTEST_DIR}" )
# set variables normally set by FIND_PACKAGE(GTest)
SET( GTEST_FOUND "GTEST_FOUND" )
SET( GTEST_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/${LIBGTEST_INCLUDE_DIR}" )
SET( GTEST_LIBRARIES "${LIBGTEST}" )
SET( GTEST_BOTH_LIBRARIES "${LIBGTEST} ${CMAKE_LINK_LIBRARY_FLAG}${LIBGTEST_MAIN}" )

# libs/msgpack
SET( LIBMSGPACK "msgpack-static" )
SET( LIBMSGPACK_DIR "libs/msgpack-1.0.0" )
SET( LIBMSGPACK_INCLUDE_DIR "${LIBMSGPACK_DIR}/include" )
ADD_SUBDIRECTORY( ${LIBMSGPACK_DIR} )
ADD_DEPENDENCIES( msgpack gtest gtest_main )

# libs/libjpeg-turbo and related stuff
SET( JPEGTRANF4 "jpegtranf4" )
SET( LIBJPEGTURBO "libturbojpeg.a" )
SET( LIBJPEGTURBO_DIR "libs/libjpeg-turbo-1.4.0" )
SET( LIBJPEGTURBO_SOURCE_DIR "${CMAKE_SOURCE_DIR}/${LIBJPEGTURBO_DIR}" )
SET( LIBJPEGTURBO_BINARY_DIR "${CMAKE_BINARY_DIR}/${LIBJPEGTURBO_DIR}" )
SET( LIBJPEGTURBO_INCLUDE_DIR "${LIBJPEGTURBO_SOURCE_DIR};${LIBJPEGTURBO_BINARY_DIR}" )
ADD_LIBRARY( ${JPEGTRANF4} OBJECT
    "src/sesame/crypto/jpegtranf4.c"
    "${LIBJPEGTURBO_BINARY_DIR}/config.h"
    "${LIBJPEGTURBO_BINARY_DIR}/jconfig.h"
    "${LIBJPEGTURBO_BINARY_DIR}/jconfigint.h"
    )
ADD_CUSTOM_TARGET(
    genlibjpegturbodir
    mkdir -p "${LIBJPEGTURBO_BINARY_DIR}"
    )
ADD_CUSTOM_COMMAND(
    OUTPUT
    "${LIBJPEGTURBO_BINARY_DIR}/config.h"
    "${LIBJPEGTURBO_BINARY_DIR}/jconfig.h"
    "${LIBJPEGTURBO_BINARY_DIR}/jconfigint.h"
    COMMAND "${LIBJPEGTURBO_SOURCE_DIR}/configure"
    COMMAND make
    DEPENDS genlibjpegturbodir
    WORKING_DIRECTORY "${LIBJPEGTURBO_BINARY_DIR}"
    )
SET_PROPERTY( TARGET ${JPEGTRANF4} APPEND PROPERTY INCLUDE_DIRECTORIES "${LIBJPEGTURBO_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY LINK_DIRECTORIES "${LIBJPEGTURBO_BINARY_DIR}/.libs" )

# where to place generated sources
SET( GEN_SOURCE_DIR "${CMAKE_BINARY_DIR}/gen" )

# sesame
ADD_SUBDIRECTORY( "src" )

# test
ADD_SUBDIRECTORY( "test" )
