SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR} )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBSCRYPT_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBMSGPACK_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBAPG_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBXSEL_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBTECLA_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/${LIBFLEX_INCLUDE_DIR}" )
SET_PROPERTY( DIRECTORY APPEND PROPERTY INCLUDE_DIRECTORIES "${GEN_SOURCE_DIR}" )

SET( LEMON_SOURCE "lemon/lemon.c" )
ADD_EXECUTABLE( lemon "${LEMON_SOURCE}" )

# create dir for generated sources and copy grammar to it
SET( GRAMMAR_DEFINITION "${CMAKE_SOURCE_DIR}/src/sesame/utils/grammar.y" )
ADD_CUSTOM_TARGET(
    gensourcedir
    mkdir -p "${GEN_SOURCE_DIR}/sesame/utils"
    COMMAND cp "${GRAMMAR_DEFINITION}" "${GEN_SOURCE_DIR}/sesame/utils"
    )
ADD_DEPENDENCIES( gensourcedir libflex )

# generate grammar.cpp
SET( GRAMMAR_SOURCE "${GEN_SOURCE_DIR}/sesame/utils/grammar.cpp" )
SET( TOKEN_HEADER "${GEN_SOURCE_DIR}/sesame/utils/grammar.h" )
ADD_CUSTOM_COMMAND(
    OUTPUT ${GRAMMAR_SOURCE} ${TOKEN_HEADER}
    COMMAND "${CMAKE_BINARY_DIR}/src/lemon"
    ARGS "-T${CMAKE_SOURCE_DIR}/src/lemon/lempar.cpp" "grammar.y"
    DEPENDS gensourcedir ${GRAMMAR_DEFINITION}
    WORKING_DIRECTORY "${GEN_SOURCE_DIR}/sesame/utils"
    )

# generate lexer.c
SET( LEXER_DEFINITION "${CMAKE_SOURCE_DIR}/src/sesame/utils/lexer.l" )
SET( LEXER_SOURCE "${GEN_SOURCE_DIR}/sesame/utils/lexer.c" )
ADD_CUSTOM_COMMAND(
    OUTPUT ${LEXER_SOURCE}
    COMMAND ${BINFLEX}
    ARGS "-olexer.c" "--header-file=lexer.h" "${LEXER_DEFINITION}"
    DEPENDS lemon ${LEXER_DEFINITION} ${TOKEN_HEADER}
    WORKING_DIRECTORY "${GEN_SOURCE_DIR}/sesame/utils"
    )

FILE( GLOB_RECURSE SOURCES "sesame/*.cpp" )
LIST( APPEND SOURCES ${LEXER_SOURCE} ${GRAMMAR_SOURCE} )
ADD_EXECUTABLE( sesame "main.cpp" ${SOURCES} $<TARGET_OBJECTS:${JPEGTRANF4}> )
ADD_DEPENDENCIES( sesame libtecla )

TARGET_LINK_LIBRARIES( sesame
    ${LIBSSL} ${LIBCRYPTO} ${LIBSCRYPT} ${LIBFLEX}
    ${LIBTECLA} ${LIBMSGPACK} ${LIBXSEL} ${LIBX11}
    ${LIBAPG} ${LIBPTHREAD} ${LIBJPEG} ${LIBJPEGTURBO}
    ${LIBTERMCAP} ${LIBICONV} ${LIBNCURSES}
    )

INSTALL(TARGETS sesame)
